--- a/src/Web/BlazorClient/Shared/MainLayout.razor
+++ b/src/Web/BlazorClient/Shared/MainLayout.razor
@@ -45,7 +45,7 @@
             </section>
 
             <section>
-                © eShopOnDapr. All rights reserved
+                © @DateTime.Now.Year eShopOnDapr. All rights reserved
             </section>
 
         </article>
